# lame-rms

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  Readme.md  bootstrap.php  composer.json  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  migrate.sh  phinx.php  phpunit.xml.dist
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_security_roles.py
backend/app/: feature_flags.py  main.py  worker.py
backend/app/auth/: __init__.py  audit.py  jwt.py  management.py  mfa.py  models.py  passwords.py  refresh.py  roles.py  service.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/etl/: __init__.py  extract.py  load.py  run.py  transform.py
backend/app/integrations/: __init__.py  base.py  crm.py  notifications.py  registry.py  schedule.py  storage.py  tasks.py
backend/app/models/: __init__.py  generated.py
backend/app/monitoring/: __init__.py  metrics.py  security.py
backend/app/repositories/: __init__.py  assets.py
backend/app/schemas/: __init__.py  assets.py  generated.py  integrations.py
backend/app/services/: __init__.py  assets.py  (+1 more)
backend/loadtests/: main.js
backend/pydantic_settings/: __init__.py
backend/structlog/: __init__.py
backend/tests/: test_health.py
backend/var/: .gitignore
(+179 files in other folders)
