[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lame-rms-backend"
version = "0.1.0"
description = "Backend skeleton for lame-rms"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "lame-rms", email = "dev@example.com"},
]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<3.2",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "alembic>=1.13,<1.14",
    "passlib[bcrypt]>=1.7,<1.8",
    "PyJWT>=2.9,<3.0",
    "httpx>=0.27,<0.28",
    "celery>=5.4,<5.5",
    "redis>=5.0,<6.0",
    "prometheus-client>=0.20,<0.21",
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.6.0",
    "black>=24.0,<25.0",
    "mypy>=1.10,<2.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = ["app"]
